--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -9,9 +9,9 @@
       <img src="{% static 'lang-logo.png'%}">
     </a>
     <h1>Welcome to ACCrobat!</h1>
-    <p>With ACCrobat, you can analyze and visualize TCGA .BED file data.</p>
+    <p>With ACCrobat, you can analyze and visualize TCGA .BED files easily for fast insights of tumor genomic data..</p>
     <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span>Get Started!</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
+    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/colbytylerford/projectaccrobat"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
 </div>
 <div class="container">
@@ -35,7 +35,7 @@
       <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
       <ul>
         <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
+        <li><a href="https://bioinformatics.uncc.edu/">Bioinformatics@UNCC</a></li>
         <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
         <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
       </ul>
