--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -12,8 +12,8 @@
         padding-bottom: 80px
     }
     .jumbotron .btn-primary {
-        background: #845ac7;
-        border-color: #845ac7
+        background: #00703C;
+        border-color: #00703C
     }
     .jumbotron .btn-primary:hover {
         background: #7646c1
@@ -56,9 +56,9 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Authors: <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Colby Ford</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Conor Nodzak</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-php">Lei Zhao</a></li>
+            <li><a href="http://www.colbyford.com">Colby Ford</a></li>
+            <li><a href="https://www.linkedin.com/in/mitch-nodzak-144330a4">Conor Nodzak</a></li>
+            <li><a href="">Lei Zhao</a></li>
             <li class="divider"></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">References</a></li>
           </ul>
@@ -66,7 +66,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a href="http://bioinformatics.uncc.edu/"><span class="glyphicon glyphicon-book"></span>Bioinformatics@UNCC</a>
+        <a href="http://bioinformatics.uncc.edu/"><span class="glyphicon glyphicon-book"></span> Bioinformatics@UNCC</a>
       </li>
     </ul>
   </div>
