--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -6,10 +6,10 @@
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="{% static 'lang-logo.png'%}">
+      <img src="{% static 'chrlogo_200px.png'%}">
     </a>
     <h1>Welcome to ACCrobat!</h1>
-    <p>With ACCrobat, you can analyze and visualize TCGA .BED files easily for fast insights of tumor genomic data..</p>
+    <p>With ACCrobat, you can analyze and visualize TCGA .BED files easily for fast insights into tumor genetic data.</p>
     <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span>Get Started!</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/colbytylerford/projectaccrobat"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
