--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -7,16 +7,16 @@
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <style type="text/css">
     .jumbotron {
-        background: #532f8c;
+        background: #3276b4;
         color: white;
         padding-bottom: 80px
     }
     .jumbotron .btn-primary {
-        background: #00703C;
-        border-color: #00703C
+        background: #708090;
+        border-color: ##708090
     }
     .jumbotron .btn-primary:hover {
-        background: #7646c1
+        background: #36648B
     }
     .jumbotron p {
         color: #d9ccee;
