--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GettingStarted</title>
+<title>Project ACCrobat</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -19,7 +19,7 @@
         background: #36648B
     }
     .jumbotron p {
-        color: #d9ccee;
+        color: #cce1ee;
         max-width: 75%;
         margin: 1em auto 2em
     }
