--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -36,7 +36,7 @@
     </div>
   </div> <!-- row -->
    <div class="alert alert-info text-center" role="alert">
-   2016 Ford, Nodzak, Zhao - The Univerity of North Carolina at Charlotte
+   2016 Ford, Nodzak, Zhao - The University of North Carolina at Charlotte
   </div>
 </div>
 {% endblock %}
