--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -10,7 +10,7 @@
     </a>
     <h1>Welcome to ACCrobat!</h1>
     <p>With ACCrobat, you can analyze and visualize TCGA .BED files easily for fast insights into tumor genetic data.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span>Get Started!</a>
+    <a type="button" class="btn btn-lg btn-default" href="/ACCTool/"><span class="glyphicon glyphicon-flash"></span>Get Started!</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/colbytylerford/projectaccrobat"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
 </div>
@@ -20,7 +20,7 @@
     <div class="col-md-6">
       <h3><span class="glyphicon glyphicon-info-sign"></span> How this app works</h3>
       <ul>
-        <li>This app was developed in Python and deployed to Heroku using <a href="https://github.com/colbytylerford/projectaccrobat">GitHub</a> as the repository.</li>
+        <li>This app was developed in Python/Django and deployed to Heroku using <a href="https://github.com/colbytylerford/projectaccrobat">GitHub</a> as the repository.</li>
         <li>ACCrobat takes TCGA .BED files and summarizes their data by pivoting and visualizing the information.</li>
         <li>The output presented by this application can help us to understand the genetic differences of tumors from looking at various cell samples.</li>
     </ul>
